testData/src/error/java/ExampleController3.java
package src.error.java;

/**
 * Created by 吴昊 on 2019/12/20.
 */
@org.springframework.web.bind.annotation.RestController
@org.springframework.web.bind.annotation.RequestMapping
public class ExampleController {

  @org.springframework.web.bind.annotation.GetMapping("/{id}")
  public void test() {

  }
}
